add mongoose save and query example
