# api/swagger/swagger.yaml
@@ -62,6 +62,8 @@ paths:
     get:
       security:
         - Bearer: []
+      tags:
+        - Product
       description: list products
       # used as the method name of the controller
       operationId: list
@@ -100,6 +102,8 @@ definitions:
   ProductContent:
     properties:
       name:
+        type: string
+      description:
         type: string
       price:
         type: integer
